@@ -1,5 +1,10 @@
 2013-12-05  Julien Bect  <julien.bect@supelec.fr>
 
+	Handle infinities in stk_sprintf_colvect_* functions.
+
+	* misc/text/stk_sprintf_colvect_fixedpoint.m: modified
+	* misc/text/stk_sprintf_colvect_scientific.m: modified
+
 	Add an optional max_width argument to @stk_dataframe/disp.
 
 	* utils/arrays/@stk_dataframe/disp.m: modified
